# jxmis-mcp

./: .env.example  .gitignore  Caddyfile.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/jxmis_mcp_server/: __init__.py  auth.py  base.py  cli.py  client.py  context.py  crypto.py  handlers.py  jxmis.py  manager.py  registry.py  schemas.py  server.py  settings.py  storage.py  toolsets.py
tests/: test_client_login_response.py  test_server.py  test_storage.py
