[project]
name = "jxmis-mcp-server"
version = "0.1.0"
description = "Remote MCP server for the JXMIS project management platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "anyio>=4.0.0,<5.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.28.0,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "qrcode[pil]>=8.0",
    "typer>=0.20.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
]

[project.scripts]
jxmis-mcp = "jxmis_mcp_server.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jxmis_mcp_server"]
